latex2mmlc/src/snapshots/latex2mmlc__tests__genfrac_1pt_with_space.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\genfrac(]{  1pt     }{2}{a+b}{c+d}"
---
<math>
    <mrow displaystyle="false" scriptlevel="1">
        <mo>(</mo>
        <mfrac linethickness="1pt">
            <mrow>
                <mi>a</mi>
                <mo>+</mo>
                <mi>b</mi>
            </mrow>
            <mrow>
                <mi>c</mi>
                <mo>+</mo>
                <mi>d</mi>
            </mrow>
        </mfrac>
        <mo>]</mo>
    </mrow>
</math>
