latex2mmlc/src/snapshots/latex2mmlc__tests__genfrac_wrong_unit.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\genfrac(]{1pg}{2}{a+b}{c+d}"
---
Position: 10
ExpectedLength(
    "1pg",
)
