latex2mmlc/src/snapshots/latex2mmlc__tests__greater_than.snap
---
source: latex2mmlc/src/lib.rs
expression: x > y
---
<math>
    <mi>x</mi>
    <mo>&gt;</mo>
    <mi>y</mi>
</math>
