latex2mmlc/src/snapshots/latex2mmlc__tests__greek_letter_boldsymbol.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\boldsymbol{\\alpha}"
---
<math>
    <mi>𝜶</mi>
</math>
