latex2mmlc/src/snapshots/latex2mmlc__tests__greek_letters.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\phi/\\varphi"
---
<math>
    <mi>ϕ</mi>
    <mo>/</mo>
    <mi>φ</mi>
</math>
