latex2mmlc/src/snapshots/latex2mmlc__tests__incorrect_bracket.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\operatorname[lim}"
---
UnexpectedToken {
    expected: GroupBegin,
    got: Paren(
        Op(
            '[',
        ),
    ),
}
