latex2mmlc/src/snapshots/latex2mmlc__tests__incorrect_bracket_in_begin.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\begin{matrix] 1 \\end{matrix}"
---
UnexpectedToken {
    expected: RBrace,
    got: Paren(
        Op(
            ']',
        ),
    ),
}
