latex2mmlc/src/snapshots/latex2mmlc__tests__int_double_sub.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\int__3 x dx"
---
CannotBeUsedHere {
    got: Underscore,
    correct_place: "after an identifier or operator",
}
