latex2mmlc/src/snapshots/latex2mmlc__tests__int_limit_prime.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\int\\limits'"
---
<math>
    <mover>
        <mo>∫</mo>
        <mo>′</mo>
    </mover>
</math>
